--- a/policy-service/src/main/resources/application.properties
+++ b/policy-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=policy-service
 server.port=${SERVER_PORT:8080}
+soap.service.url=${SOAP_SERVICE_URL:http://localhost:8081/ws}
 
 # --- KAFKA ---
 spring.kafka.bootstrap-servers=localhost:29092
